--- a/index.html
+++ b/index.html
@@ -3,6 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="zh_TW" />
+    <meta property="og:title" content="第二屆亞太地區禁羈研討會 (A.S.K. II)" />
+    <meta property="og:description" content="A.S.K. II: The Second Asia-Pacific Symposium on KINK 2026年7-8月（臺北）" />
+    <meta property="og:image" content="/assets/partner/禁羈學術委員會.png" />
+    <meta property="og:url" content="https://ask2026.example.com/" />
+    <meta property="og:site_name" content="第二屆亞太地區禁羈研討會 (A.S.K. II)" />
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="第二屆亞太地區禁羈研討會 (A.S.K. II)" />
+    <meta name="twitter:description" content="A.S.K. II: The Second Asia-Pacific Symposium on KINK 2026年7-8月（臺北）" />
+    <meta name="twitter:image" content="/assets/partner/禁羈學術委員會.png" />
+    <meta name="twitter:site" content="@ask2026" />
+    <!-- Favicon & App Icon -->
+    <link rel="icon" type="image/png" href="/assets/partner/禁羈學術委員會.png" />
+    <link rel="apple-touch-icon" href="/assets/partner/禁羈學術委員會.png" />
+    
+    
     <title>第二屆亞太地區禁羈研討會 (A.S.K. II)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -321,11 +340,11 @@
         </div>
       </div>
     </section>
-    <footer class="py-12 px-6 text-center text-gray-400 text-sm">
+    <footer class="py-10 px-6 text-center text-gray-400 text-sm">
       <p class="mb-2 tracking-widest font-medium text-gray-600">
         A.S.K. II: The Second Asia-Pacific Symposium on KINK
       </p>
-      <p>© 2026 第二屆亞太地區禁羈研討會籌備委員會</p>
+      <p>© 2026 第二屆亞太地區禁羈研討會</p>
     </footer>
   </body>
 </html>
