--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:locale" content="zh_TW" />
     <meta property="og:title" content="第二屆亞太地區禁羈研討會 (A.S.K. II)" />
     <meta property="og:description" content="A.S.K. II: The Second Asia-Pacific Symposium on KINK 2026年7-8月（臺北）" />
-    <meta property="og:image" content="https://bdsmask.org/assets/partner/og_image.jpeg" />
+    <meta property="og:image" content="https://bdsmask.org/assets/partner/og_image.jpg" />
     <meta property="og:url" content="https://ask2026.example.com/" />
     <meta property="og:site_name" content="第二屆亞太地區禁羈研討會 (A.S.K. II)" />
     <!-- Twitter Card Meta Tags -->
@@ -18,8 +18,8 @@
     <meta name="twitter:image" content="/assets/partner/禁羈學術委員會.png" />
     <meta name="twitter:site" content="@ask2026" />
     <!-- Favicon & App Icon -->
-    <link rel="icon" type="image/png" href="https://bdsmask.org/assets/partner/og_image.jpeg" />
-    <link rel="apple-touch-icon" href="https://bdsmask.org/assets/partner/og_image.jpeg" />
+    <link rel="icon" type="image/png" href="https://bdsmask.org/assets/partner/禁羈學術委員會.png" />
+    <link rel="apple-touch-icon" href="https://bdsmask.org/assets/partner/禁羈學術委員會.png" />
     
     
     <title>第二屆亞太地區禁羈研討會 (A.S.K. II)</title>
