更新網站內容

--- a/index.html
+++ b/index.html
@@ -6,23 +6,38 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="zh_TW" />
-    <meta property="og:title" content="第二屆亞太地區禁羈研討會 (A.S.K. II)" />
-    <meta property="og:description" content="A.S.K. II: The Second Asia-Pacific Symposium on KINK 2026年7-8月（臺北）" />
-    <meta property="og:image" content="https://bdsmask.org/assets/partner/og_image.jpg" />
+    <meta property="og:title" content="第二屆亞太禁羈研討會 (A.S.K. II)" />
+    <meta
+      property="og:description"
+      content="A.S.K. II: The Second Asia-Pacific Symposium on KINK 2026年7-8月（臺北）"
+    />
+    <meta
+      property="og:image"
+      content="https://bdsmask.org/assets/partner/og_image.jpg"
+    />
     <meta property="og:url" content="https://ask2026.example.com/" />
-    <meta property="og:site_name" content="第二屆亞太地區禁羈研討會 (A.S.K. II)" />
+    <meta property="og:site_name" content="第二屆亞太禁羈研討會 (A.S.K. II)" />
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="第二屆亞太地區禁羈研討會 (A.S.K. II)" />
-    <meta name="twitter:description" content="A.S.K. II: The Second Asia-Pacific Symposium on KINK 2026年7-8月（臺北）" />
+    <meta name="twitter:title" content="第二屆亞太禁羈研討會 (A.S.K. II)" />
+    <meta
+      name="twitter:description"
+      content="A.S.K. II: The Second Asia-Pacific Symposium on KINK 2026年7-8月（臺北）"
+    />
     <meta name="twitter:image" content="/assets/partner/禁羈學術委員會.png" />
     <meta name="twitter:site" content="@ask2026" />
     <!-- Favicon & App Icon -->
-    <link rel="icon" type="image/png" href="https://bdsmask.org/assets/partner/禁羈學術委員會.png" />
-    <link rel="apple-touch-icon" href="https://bdsmask.org/assets/partner/禁羈學術委員會.png" />
-    
-    
-    <title>第二屆亞太地區禁羈研討會 (A.S.K. II)</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://bdsmask.org/assets/partner/禁羈學術委員會.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      href="https://bdsmask.org/assets/partner/禁羈學術委員會.png"
+    />
+
+    <title>第二屆亞太禁羈研討會 (A.S.K. II)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap");
@@ -42,7 +57,7 @@
   <body class="leading-relaxed">
     <header class="py-24 pb-10 px-6 text-center accent-border">
       <h1 class="text-2xl md:text-5xl font-bold text-black mb-6">
-        第二屆亞太地區禁羈研討會
+        第二屆亞太禁羈研討會
       </h1>
       <p
         class="text-sm md:text-base text-gray-500 tracking-widest mb-4 uppercase text-sm font-medium"
@@ -82,7 +97,7 @@
         </p>
       </div>
       <div class="mt-8 text-gray-600 font-medium">
-        <p>預計時間、地點：<br />2026年7-8月（週六、日）（臺北）</p>
+        <p>預計時間、地點：<br />2026年7月25日-26日（週六、日）台北</p>
       </div>
     </header>
 
@@ -132,13 +147,20 @@
           「亞太禁羈研討會」系列也將開始與發表者、研究社群溝通，一起探索並累積學術合輯以英文、華語出版的可能性。
         </p>
         <h3 class="text-xl font-bold mb-4">研討會資訊</h3>
-        <p>
-          日期：2026年7月_____日（星期六、日） <br />
-          地點： <br />
-          場地與交通指引： <br />
-          官方網站： <br />
-          聯絡方式：<br />
-        </p>
+        <div>
+          <div>
+            官方網站：
+            <a href="https://bdsmask.org" target="_blank"
+              >https://bdsmask.org</a
+            >
+          </div>
+          <div>
+            聯絡方式：
+            <a class="underline" href="mailto:bdsmaskorg@gmail.com"
+              >bdsmaskorg@gmail.com</a
+            >
+          </div>
+        </div>
       </div>
     </section>
     <section class="max-w-5xl mx-auto py-10 px-6">
@@ -166,7 +188,9 @@
         </div>
         <div class="flex p-4 bg-black text-white">
           <span class="w-1/2 font-bold">研討會日期：</span>
-          <span class="w-1/2 font-bold underline">2026年7月25-26日</span>
+          <span class="w-1/2 font-bold underline"
+            >2026年7月25日-26日（週六、日）台北</span
+          >
         </div>
       </div>
     </section>
@@ -271,7 +295,14 @@
         投稿說明
       </h3>
       <p class="mb-12 text-sm text-gray-500">
-        投稿人請至網站註冊並上傳 PDF 格式之稿件。若對主題、格式、語言、過程有任何疑難，請洽議程主席（電子郵件:
+        投稿之語言不予以硬性限定，但建議以華語語系寫成。請在2026/02/28前繳交長度約800字之論文摘要或座談大綱（議程委員可能不予閱讀超出此限之部分），詳見摘要範例格式。議程委員將選出適合發表之論文或座談並給予建議。議程委員亦可投稿，但不審有利益衝突的稿件。<br /><br />
+        投稿人請點選下方連結至 [Easy Chair](<a
+          href="https://easychair.org/conferences/?conf=ask2026"
+          target="_blank"
+          rel="noopener"
+          >https://easychair.org/conferences/?conf=ask2026</a
+        >) 網站註冊並上傳
+        PDF格式之稿件。若對主題、格式、過程有任何疑難，請洽議程主委（
         <a class="underline" href="mailto:ask2024@easychair.org"
           >ask2024@easychair.org</a
         >）
@@ -279,15 +310,24 @@
       <div class="flex flex-col sm:flex-row justify-center gap-4">
         <a
           href="https://easychair.org/conferences/?conf=ask2026"
-          class="bg-black text-white px-20 py-4 font-bold hover:bg-gray-800 transition min-w-[200px]"
+          class="flex-1 bg-black text-white px-4 py-4 font-bold hover:bg-gray-800 transition min-w-[150px] text-center"
+          target="_blank"
         >
           投稿網址
         </a>
         <a
-          href="/"
-          class="px-20 py-4 font-bold border-2 border-black hover:bg-black hover:text-white transition min-w-[200px]"
+          href="https://docs.google.com/document/d/1ma4Z3mvjjpq76jciF43K64Hfuhoe4A0mJhNt1EvBuLE/edit?usp=sharing"
+          target="_blank"
+          class="flex-1 px-4 py-4 font-bold border-2 border-black hover:bg-black hover:text-white transition min-w-[150px] text-center"
         >
-          下載範例
+          研究論文摘要提案範例
+        </a>
+        <a
+          href="https://docs.google.com/document/d/1932vnrI5JxdM51wKv2Mod1ysybE83uWOD6Xp3fGEnT8/edit?usp=sharing"
+          target="_blank"
+          class="flex-1 px-4 py-4 font-bold border-2 border-black hover:bg-black hover:text-white transition min-w-[150px] text-center"
+        >
+          座談與工作坊提案範例
         </a>
       </div>
     </section>
@@ -301,15 +341,42 @@
           <div class="col-span-1 sm:col-span-2 md:col-span-3">
             <h4 class="text-lg font-bold mb-4">主辦單位</h4>
             <div class="flex flex-wrap gap-6 justify-start items-center">
-              <div class="flex flex-col items-center w-40" style="max-width:10rem">
-                <img src="/assets/partner/禁羈學術委員會.png" alt="禁羈學術委員會" class="h-16 object-contain mb-2" />
-                <span class="font-medium text-center">禁羈學術委員會<br><span class="text-xs text-gray-500">ink Academic Committee</span></span>
+              <div
+                class="flex flex-col items-center w-40"
+                style="max-width: 10rem"
+              >
+                <img
+                  src="/assets/partner/禁羈學術委員會.png"
+                  alt="禁羈學術委員會"
+                  class="h-16 object-contain mb-2"
+                />
+                <span class="font-medium text-center"
+                  >禁羈學術委員會<br /><span class="text-xs text-gray-500"
+                    >Kink Academic Committee</span
+                  ></span
+                >
               </div>
-              <div class="flex flex-col items-center w-40" style="max-width:10rem">
-                <a href="https://trea.oen.tw/" target="_blank" rel="noopener">
-                  <img src="/assets/partner/社團法人台灣情感教育協會.jpg" alt="社團法人台灣情感教育協會" class="h-16 object-contain mb-2" />
+              <div
+                class="flex flex-col items-center w-40"
+                style="max-width: 10rem"
+              >
+                <a
+                  href="https://www.trea.org.tw/"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  <img
+                    src="/assets/partner/社團法人台灣情感教育協會.jpg"
+                    alt="社團法人台灣情感教育協會"
+                    class="h-16 object-contain mb-2"
+                  />
                 </a>
-                <span class="font-medium text-center">社團法人台灣情感教育協會<br><span class="text-xs text-gray-500">Taiwan Relationships Education Association</span></span>
+                <span class="font-medium text-center"
+                  >社團法人台灣情感教育協會<br /><span
+                    class="text-xs text-gray-500"
+                    >Taiwan Relationships Education Association</span
+                  ></span
+                >
               </div>
             </div>
           </div>
@@ -317,23 +384,64 @@
           <div class="col-span-1 sm:col-span-2 md:col-span-3 mt-10">
             <h4 class="text-lg font-bold mb-4">協辦單位</h4>
             <div class="flex flex-wrap gap-6 justify-start items-center">
-              <div class="flex flex-col items-center w-40" style="max-width:10rem">
-                <a href="https://www.bdsmtw.com/" target="_blank" rel="noopener">
-                  <img src="/assets/partner/皮繩愉虐邦 .jpg" alt="皮繩愉虐邦 " class="h-16 object-contain mb-2" />
+              <div
+                class="flex flex-col items-center w-40"
+                style="max-width: 10rem"
+              >
+                <a
+                  href="https://www.bdsmtw.com/"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  <img
+                    src="/assets/partner/皮繩愉虐邦 .jpg"
+                    alt="皮繩愉虐邦 "
+                    class="h-16 object-contain mb-2"
+                  />
                 </a>
-                <span class="font-medium text-center">皮繩愉虐邦 <br><span class="text-xs text-gray-500">Taiwan BDSM Company</span></span>
+                <span class="font-medium text-center"
+                  >皮繩愉虐邦 <br /><span class="text-xs text-gray-500"
+                    >Taiwan BDSM Company</span
+                  ></span
+                >
               </div>
-              <div class="flex flex-col items-center w-40" style="max-width:10rem">
+              <div
+                class="flex flex-col items-center w-40"
+                style="max-width: 10rem"
+              >
                 <a href="https://shibaru.life/" target="_blank" rel="noopener">
-                  <img src="/assets/partner/縛.生.png" alt="縛.生" class="h-16 object-contain mb-2" />
+                  <img
+                    src="/assets/partner/縛.生.png"
+                    alt="縛.生"
+                    class="h-16 object-contain mb-2"
+                  />
                 </a>
-                <span class="font-medium text-center">縛.生<br><span class="text-xs text-gray-500">shibaru.life</span></span>
+                <span class="font-medium text-center"
+                  >縛.生<br /><span class="text-xs text-gray-500"
+                    >shibaru.life</span
+                  ></span
+                >
               </div>
-              <div class="flex flex-col items-center w-40" style="max-width:10rem">
-                <a href="https://www.scu.edu.tw/sw/" target="_blank" rel="noopener">
-                  <img src="/assets/partner/東吳大學社會工作學系.jpg" alt="東吳大學社會工作學系" class="h-16 object-contain mb-2" />
+              <div
+                class="flex flex-col items-center w-40"
+                style="max-width: 10rem"
+              >
+                <a
+                  href="https://www.scu.edu.tw/sw/"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  <img
+                    src="/assets/partner/東吳大學社會工作學系.jpg"
+                    alt="東吳大學社會工作學系"
+                    class="h-16 object-contain mb-2"
+                  />
                 </a>
-                <span class="font-medium text-center">東吳大學社會工作學系<br><span class="text-xs text-gray-500">Department of Social Work Soochow University</span></span>
+                <span class="font-medium text-center"
+                  >東吳大學社會工作學系<br /><span class="text-xs text-gray-500"
+                    >Department of Social Work Soochow University</span
+                  ></span
+                >
               </div>
             </div>
           </div>
@@ -344,7 +452,7 @@
       <p class="mb-2 tracking-widest font-medium text-gray-600">
         A.S.K. II: The Second Asia-Pacific Symposium on KINK
       </p>
-      <p>© 2026 第二屆亞太地區禁羈研討會</p>
+      <p>© 2026 第二屆亞太禁羈研討會</p>
     </footer>
   </body>
 </html>
