--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           >為核心命題，邀請各領域的碩博士生、學者、研究者，認真審議安全與平權的動態辯證關係，集體探索從不安全的創傷經驗、不平權的現況，如何朝向復元、韌性、修復的可能性，並達到自我賦權、集體增能的目的。此外，我們也歡迎所有「禁羈與BDSM相關的論文摘要」投稿。禁羈與BDSM研究本身的跨領域特質，歡迎來自人文歷史、藝術創作、社會科學、政治經濟法律、心理社工、健康醫療照護等助人工作領域，以及其他跨學科研究者投入禁羈與BDSM研究，透過本研討會平台進行難得的深入對話與交流，協助彼此進行期刊論文、學術專著或學術合輯書章的發表，或在發展碩博士論文上獲得友善學術社群的協助。
         </p>
         <p class="mb-4">
-          本次研討會歡迎（A）學術論文摘要，與（B）圓桌論壇與工作坊投稿，詳見摘要範例格式。投稿單篇「學術論文摘要」者，歡迎參考研討會的「徵稿主題」節以利發想，更歡迎投稿任何與禁羈、BDSM相關的論文。欲投稿「圓桌論壇與工作坊」者，欲投稿「圓桌論壇與工作坊」者，我們預計組幾種論壇形式，歡迎相關興趣者投稿，也誠摯邀請您自行組成不同主題的論壇投稿。
+          本次研討會歡迎（A）學術論文摘要，與（B）圓桌論壇與工作坊投稿，詳見摘要範例格式。投稿單篇「學術論文摘要」者，歡迎參考研討會的「徵稿主題」節以利發想，更歡迎投稿任何與禁羈、BDSM相關的論文。欲投稿「圓桌論壇與工作坊」者，我們預計組幾種論壇形式，歡迎相關興趣者投稿，也誠摯邀請您自行組成不同主題的論壇投稿。
         </p>
         <p class="mb-4">
           所有投稿都將循一般學術研討會運作方式，先送外部委員審查、評選後，由研討會主辦單位的學術組委員會，根據外部審查意見作為接受與否的憑據。若投稿者接受研討會邀請、在時程上得以配合者，將能順利排入議程進行發表或研討。
