--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </h3>
       <div class="max-w-2xl mx-auto border accent-border">
         <div class="flex border-b accent-border p-4">
-          <span class="w-1/2 text-gray-500">徵稿啟示公布：</span>
+          <span class="w-1/2 text-gray-500">徵稿啟事公布：</span>
           <span class="w-1/2 font-medium">2025年12月22日</span>
         </div>
         <div class="flex border-b accent-border p-4 bg-zinc-50 text-red-700">
