--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       property="og:image"
-      content="https://bdsmask.org/assets/og_image.jpg"
+      content="https://bdsmask.org/assets/og_img.jpg"
     />
     <meta property="og:url" content="https://ask2026.example.com/" />
     <meta property="og:site_name" content="第二屆亞太禁羈研討會 (A.S.K. II)" />
@@ -24,7 +24,7 @@
       name="twitter:description"
       content="A.S.K. II: The Second Asia-Pacific Symposium on KINK 2026年7-8月（臺北）"
     />
-    <meta name="twitter:image" content="https://bdsmask.org/assets/og_image.jpg" />
+    <meta name="twitter:image" content="https://bdsmask.org/assets/og_img.jpg" />
     <meta name="twitter:site" content="@ask2026" />
     <!-- Favicon & App Icon -->
     <link
