--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
           <div class="bg-white p-6 shadow-sm border accent-border">
             <h5 class="font-bold mb-3 border-b pb-2">
-              禁羈、BDSM與交織性(intersectionality)
+              一、禁羈、BDSM與交織性(intersectionality)
             </h5>
             <p class="text-sm text-gray-500">
               1-1、禁羈、BDSM與性、性別(sex and gender)<br />
@@ -221,7 +221,7 @@
           </div>
           <div class="bg-white p-6 shadow-sm border accent-border">
             <h5 class="font-bold mb-3 border-b pb-2">
-              直面禁羈、BDSM的羞恥、禁忌與污名、愉悅與情趣
+              二、直面禁羈、BDSM的羞恥、禁忌與污名、愉悅與情趣
             </h5>
             <p class="text-sm text-gray-500">
               2-1、禁羈、BDSM與心理、諮商、醫療、藥物 <br />
